# structurs

./: Cargo.toml  README.md  main.rs  rustfmt.toml
src/: lib.rs  read.rs  write.rs
struct-reader-derive/: Cargo.toml
struct-reader-derive/src/: lib.rs
structurs/: Cargo.toml  main.rs
structurs-derive/: Cargo.toml
structurs-derive/src/: lib.rs
structurs/src/: lib.rs
tests/: 01-structure.rs  02-endian.rs  03-padding.rs  bin.rs  progress.rs
