[package]
name = "struct-reader"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct-reader-derive = { path = "struct-reader-derive" }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/progress.rs"

# This bin is used to see the result of `cargo expand`.
[[bin]]
name = "tests-bin"
path = "tests/bin.rs"
