[package]
name = "structurs"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structurs-derive = { path = "structurs-derive" }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/progress.rs"

# This bin is used to see the result of `cargo expand`.
[[bin]]
name = "tests-bin"
path = "tests/bin.rs"
