[package]
name = "structurs-derive"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Macro implementation of #[derive(structurs::Read)]."
repository = "https://github.com/byhowe/structurs"
keywords = ["read", "bytes"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
