[package]
name = "structurs"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Read bytes from a source and turn them into structures."
repository = "https://github.com/byhowe/structurs"
keywords = ["read", "bytes"]
readme = "README.md"

[dependencies]
structurs-derive = { version = "0.1.0", path = "../structurs-derive" }

[features]
default = []
derive = []
